@@ -1,3 +1,9 @@
+2005-11-10  Masatake YAMATO  <jet@gyve.org>
+
+	* add-log.el: (add-log-current-defun): Handle 
+	class::method notation of c++.
+	Fix incorrect comment.
+
 2005-11-10  Alan Mackenzie  <acm@muc.de>
 
 	* help-fns.el (describe-variable): Make C-h v work when a variable
